Create admin API + update API doc
