# server/openapi/openapi.yaml
@@ -16,6 +16,7 @@ tags:
     - name: comment
     - name: user
     - name: notification
+    - name: admin
 paths:
     /api/auth/register:
         post:
@@ -1996,6 +1997,454 @@ paths:
                                     message:
                                         type: string
                                         example: notificationId ${notificationId} not found
+    /api/admin/user:
+        get:
+            tags:
+                - "admin"
+            summary: Lấy danh sách user
+            security:
+                - bearerAuth: []
+            parameters:
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                  description: Trang
+                - in: query
+                  name: limit
+                  schema:
+                      type: integer
+                  description: Số lượng user trả về
+                - in: query
+                  name: userId
+                  schema:
+                      type: integer
+                  description: userId
+                - in: query
+                  name: isBlocked
+                  schema:
+                      type: boolean
+                  description: Đang hoạt động / bị khóa
+                - in: query
+                  name: isVerified
+                  schema:
+                      type: boolean
+                  description: Đã / chưa xác thực
+                - in: query
+                  name: isAuthor
+                  schema:
+                      type: boolean
+                  description: Tác giả
+                - in: query
+                  name: search
+                  schema:
+                      type: string
+                  description: Tìm kiếm theo email hoặc tên hiển thị
+            responses:
+                200:
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    users:
+                                        type: array
+                                        items:
+                                            type: object
+                                            properties:
+                                                userId:
+                                                    type: integer
+                                                email:
+                                                    type: string
+                                                displayName:
+                                                    type: string
+                                                avatar:
+                                                    type: string
+                                                description:
+                                                    type: string
+                                                gender:
+                                                    type: string
+                                                    enum: [Bí mật, Nam, Nữ]
+                                                isVerified:
+                                                    type: boolean
+                                                isBlocked:
+                                                    type: boolean
+                                                role:
+                                                    type: string
+                                                    enum:
+                                                        [Reader, Author, Admin]
+                                                flowers:
+                                                    type: integer
+                                    totalPages:
+                                        type: integer
+                401:
+                    description: Unauthorized
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                            examples:
+                                error1:
+                                    summary: Thiếu token
+                                    value:
+                                        message: access token not found
+                                error2:
+                                    summary: Không có quyền Admin
+                                    value:
+                                        message: this user has no admin permissions
+        put:
+            tags:
+                - "admin"
+            summary: Cập nhật user
+            security:
+                - bearerAuth: []
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                isBlocked:
+                                    type: boolean
+                                role:
+                                    type: string
+                                    enum: [Reader, Author]
+            responses:
+                200:
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    updatedUser:
+                                        type: object
+                401:
+                    description: Unauthorized
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                            examples:
+                                error1:
+                                    summary: Thiếu token
+                                    value:
+                                        message: access token not found
+                                error2:
+                                    summary: Không có quyền Admin
+                                    value:
+                                        message: this user has no admin permissions
+    /api/admin/novel:
+        get:
+            tags:
+                - "admin"
+            summary: Lấy danh sách truyện
+            security:
+                - bearerAuth: []
+            parameters:
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                  description: Trang
+                - in: query
+                  name: limit
+                  schema:
+                      type: integer
+                  description: Số lượng user trả về
+                - in: query
+                  name: novelId
+                  schema:
+                      type: integer
+                  description: novelId
+                - in: query
+                  name: isArchived
+                  schema:
+                      type: boolean
+                  description: Lưu trữ
+                - in: query
+                  name: search
+                  schema:
+                      type: string
+                  description: Tìm kiếm theo tiêu đề
+            responses:
+                200:
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    users:
+                                        type: array
+                                        items:
+                                            type: object
+                                            properties:
+                                                novelId:
+                                                    type: integer
+                                                title:
+                                                    type: string
+                                                description:
+                                                    type: string
+                                                cover:
+                                                    type: string
+                                                authorId:
+                                                    type: integer
+                                                genre:
+                                                    type: string
+                                                genreId:
+                                                    type: integer
+                                                isCompleted:
+                                                    type: boolean
+                                                isArchived:
+                                                    type: boolean
+                                    totalPages:
+                                        type: integer
+                401:
+                    description: Unauthorized
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                            examples:
+                                error1:
+                                    summary: Thiếu token
+                                    value:
+                                        message: access token not found
+                                error2:
+                                    summary: Không có quyền Admin
+                                    value:
+                                        message: this user has no admin permissions
+        put:
+            tags:
+                - "admin"
+            summary: Cập nhật truyện
+            security:
+                - bearerAuth: []
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                novelId:
+                                    type: integer
+                                isArchived:
+                                    type: boolean
+            responses:
+                200:
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    updatedNovel:
+                                        type: object
+                401:
+                    description: Unauthorized
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                            examples:
+                                error1:
+                                    summary: Thiếu token
+                                    value:
+                                        message: access token not found
+                                error2:
+                                    summary: Không có quyền Admin
+                                    value:
+                                        message: this user has no admin permissions
+    /api/admin/chapter:
+        get:
+            tags:
+                - "admin"
+            summary: Lấy danh sách chương
+            security:
+                - bearerAuth: []
+            parameters:
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                  description: Trang
+                - in: query
+                  name: limit
+                  schema:
+                      type: integer
+                  description: Số lượng user trả về
+                - in: query
+                  name: novelId
+                  schema:
+                      type: integer
+                  description: novelId
+                - in: query
+                  name: chapterId
+                  schema:
+                      type: integer
+                  description: chapterId
+                - in: query
+                  name: isArchived
+                  schema:
+                      type: boolean
+                  description: Lưu trữ
+                - in: query
+                  name: search
+                  schema:
+                      type: string
+                  description: Tìm kiếm theo tiêu đề
+            responses:
+                200:
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    users:
+                                        type: array
+                                        items:
+                                            type: object
+                                            properties:
+                                                novelId:
+                                                    type: integer
+                                                chapterId:
+                                                    type: integer
+                                                title:
+                                                    type: string
+                                                chapterOrder:
+                                                    type: integer
+                                                content:
+                                                    type: string
+                                                isArchived:
+                                                    type: boolean
+                                    totalPages:
+                                        type: integer
+                401:
+                    description: Unauthorized
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                            examples:
+                                error1:
+                                    summary: Thiếu token
+                                    value:
+                                        message: access token not found
+                                error2:
+                                    summary: Không có quyền Admin
+                                    value:
+                                        message: this user has no admin permissions
+        put:
+            tags:
+                - "admin"
+            summary: Cập nhật chương
+            security:
+                - bearerAuth: []
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                chapterId:
+                                    type: integer
+                                isArchived:
+                                    type: boolean
+            responses:
+                200:
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    updatedChapter:
+                                        type: object
+                401:
+                    description: Unauthorized
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                            examples:
+                                error1:
+                                    summary: Thiếu token
+                                    value:
+                                        message: access token not found
+                                error2:
+                                    summary: Không có quyền Admin
+                                    value:
+                                        message: this user has no admin permissions
+    /api/admin/notification:
+        post:
+            tags:
+                - "admin"
+            summary: Gửi thông báo
+            security:
+                - bearerAuth: []
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                receiverId:
+                                    type: integer
+                                    description: Nếu để trống sẽ gửi cho toàn bộ user
+                                title:
+                                    type: string
+                                message:
+                                    type: string
+            responses:
+                200:
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: object
+                                        example: notifications created successfully
+                401:
+                    description: Unauthorized
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    message:
+                                        type: string
+                            examples:
+                                error1:
+                                    summary: Thiếu token
+                                    value:
+                                        message: access token not found
+                                error2:
+                                    summary: Không có quyền Admin
+                                    value:
+                                        message: this user has no admin permissions
 components:
     securitySchemes:
         bearerAuth:
